# aws_s3_uploader

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: aws_s3_upload.launch
msg/: Uploader.msg
scripts/: aws_s3_upload_node.py
src/aws_s3_upload/: app.py
