<?xml version="1.0"?>
<package format="2">
  <name>aws_s3_upload</name>
  <version>0.0.0</version>
  <description>The aws_s3_upload package</description>

  <maintainer email="kenny_pan@pegatroncorp.com">Kenny Pan</maintainer>
  <license>BSD</license>

  <author email="kenny_pan@pegatroncorp.com">Kenny Pan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
